--- a/CALCULATOR WITH JAVASCRIPT/style.css
+++ b/CALCULATOR WITH JAVASCRIPT/style.css
@@ -46,13 +46,13 @@ body{
     word-wrap: break-word;
     word-break: break-all;
 }
-.output .previous-operant{
+.output .previous-operand{
     color: rgba(255, 255 ,255, .75);
     font-size: 1.5rem;
 
 }
 
-.output .current-operant{
+.output .current-operand{
     color: white;
     font-size: 1.5rem;
 }
